XWIKI-2071: Pages containing only a right aligned image breaks rendering Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7396 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-albatross/src/main/resources/albatross/screenlayout.css
+++ b/xwiki-platform-albatross/src/main/resources/albatross/screenlayout.css
@@ -235,6 +235,7 @@ Content
   font-style: italic;
   margin-bottom: 10px;
   padding-bottom: 10px;
+  clear: both;
 }
 
 
